--- a/src/app/modules/admin/containers/reports/reports.component.html
+++ b/src/app/modules/admin/containers/reports/reports.component.html
@@ -1,6 +1,6 @@
 <section class="container-reports">
   <div class="reports">
-    <h1 class="reports__title">Reportes Enviados</h1>
+    <h1 class="reports__title">Creación de reportes</h1>
     <div class="reports__container-search">
       <a class="btn-add-reports" style="cursor: pointer" (click)="create()">
         <svg
@@ -37,6 +37,7 @@
         />
       </label>
     </div>
+    <h2 class="reports__subtitle">Reportes Enviados</h2>
     <section class="list-reports">
       <div class="list-reports__table">
         <!-- Position Column -->
