Refactor: coloca titulo como subtitulo y luego crea titulo con el nombre que esta en el navbar en centro de reportes

--- a/src/app/modules/admin/containers/center-of-report/center-of-report.component.html
+++ b/src/app/modules/admin/containers/center-of-report/center-of-report.component.html
@@ -1,6 +1,6 @@
 <section class="container-report">
   <div class="report">
-    <h1 class="report__title">Reportes Recibidos</h1>
+    <h1 class="report__title">Centro de reportes</h1>
     <div class="report__container-search">
       <label for="searchReport" class="lbl-search-report">
         <input
@@ -19,6 +19,7 @@
         />
       </label>
     </div>
+    <h2 class="reports__subtitle">Reportes Recibidos</h2>
     <section class="list-report">
       <div class="list-report__table">
         <!-- Position Column -->
