Feat: Maqueta header de tabla comparativa

--- a/src/app/modules/admin/containers/comparative-table/comparative-table.component.html
+++ b/src/app/modules/admin/containers/comparative-table/comparative-table.component.html
@@ -1,1 +1,44 @@
-<p>comparative-table works!</p>
+<section class="container-comparative-table">
+  <div class="table">
+    <h1 class="table__title">Cuadro Comparativo Centro la Balsa</h1>
+    <header class="header">
+      <div class="header__container">
+        <h4 class="header__report">Reporte L00005</h4>
+        <p class="header__period">
+          Periodo <span class="header__period-span">01/2022 a 06/2022</span>
+        </p>
+      </div>
+      <h4 class="header__variables">Variables</h4>
+      <div class="header__container">
+        <h4 class="header__report">Reporte C00005</h4>
+        <p class="header__period">
+          Periodo <span class="header__period-span">07/2022 a 12/2022</span>
+        </p>
+      </div>
+    </header>
+    <div class="axe">
+      <h5 class="axe__title">Eje 1</h5>
+      <div class="axe__variables-container">
+        <div class="compare">
+          <p class="compare__value"></p>
+          <p class="compare__variable"></p>
+          <p class="compare__value"></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer class="footer">
+    <button class="footer__btn-back">Atrás</button>
+    <div class="comment">
+      <h5 class="comment__title">Informe</h5>
+      <textarea
+        class="comment__textarea"
+        name=""
+        id=""
+        cols="30"
+        rows="10"
+      ></textarea>
+    </div>
+    <button class="footer__btn-create">Crear informe</button>
+  </footer>
+</section>
