--- a/src/app/modules/admin/containers/create-comparative-reports/create-comparative-reports.component.html
+++ b/src/app/modules/admin/containers/create-comparative-reports/create-comparative-reports.component.html
@@ -103,6 +103,8 @@
         </div>
       </div>
     </div>
-    <button class="createReport__btn" mat-raised-button>Siguiente</button>
+    <button class="createReport__btn" mat-raised-button (click)="onNextBtn()">
+      Siguiente
+    </button>
   </div>
 </section>
