--- a/src/app/modules/admin/containers/variables-group/variables-group.component.html
+++ b/src/app/modules/admin/containers/variables-group/variables-group.component.html
@@ -78,7 +78,7 @@
               matTooltip="Borrar"
               (click)="onClickDelete(element.id)"
             />
-            <a class="list-variables__ico-action" matTooltip="Evolución de Variable" *ngIf="element.tipo  == 'Numerico'">
+            <a class="list-variables__ico-action" matTooltip="Evolución de Variable" *ngIf="element.tipo  == 'Numerico'" (click)="selectCenter(element)">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_71_692)">
                 <path d="M0 0H1.5V24H0V0ZM1.5 22.5H24V24H1.5V22.5Z" fill="black"/>
@@ -194,4 +194,26 @@
       </button>
     </div>
   </div>
+
+  <div class="modal-selectCenter" *ngIf="flagSelectCenter">
+    <div class="close">
+      <svg width="24px" height="24px" viewBox="0 0 16 16" style="cursor: pointer;" (click)="close()" xmlns="http://www.w3.org/2000/svg"
+      fill="currentColor" class="bi bi-x-square icon">
+      <path
+          d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
+      <path
+          d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+      </svg>
+    </div>
+    <p class="text-modal">Seleccione un centro</p>
+    <div class="container-select">
+      <mat-select placeholder="Centro" [(value)]="center">
+        <mat-option [value]="item" *ngFor="let item of centers">{{item}}</mat-option>
+      </mat-select>
+    </div>
+    <div class="container-button">
+      <button class="modal-button" mat-button>Aceptar</button>
+    </div>
+  </div>
+   <div *ngIf="flagSelectCenter" class="overlay"></div>
 </section>
