--- a/src/app/modules/admin/containers/variables-group/variables-group.component.scss
+++ b/src/app/modules/admin/containers/variables-group/variables-group.component.scss
@@ -417,7 +417,7 @@ mat-option {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border: 1px solid #083D5E;
   border-radius: 10px !important;
-  
+  font-weight: 600;
 }
 
 ::ng-deep .mat-select-panel .mat-option.mat-selected:not(.mat-option-multiple) {
