Feat: Maqueta footer con btns y textarea para reseña de informe comparativo

--- a/src/app/modules/admin/containers/comparative-table/comparative-table.component.html
+++ b/src/app/modules/admin/containers/comparative-table/comparative-table.component.html
@@ -28,17 +28,11 @@
     </div>
   </div>
   <footer class="footer">
-    <button class="footer__btn-back">Atrás</button>
+    <button class="footer__btn-back" mat-raised-button>Atrás</button>
     <div class="comment">
       <h5 class="comment__title">Informe</h5>
-      <textarea
-        class="comment__textarea"
-        name=""
-        id=""
-        cols="30"
-        rows="10"
-      ></textarea>
+      <textarea class="comment__textarea" name="" id=""></textarea>
     </div>
-    <button class="footer__btn-create">Crear informe</button>
+    <button class="footer__btn-create" mat-raised-button>Crear informe</button>
   </footer>
 </section>
