--- a/src/app/modules/admin/containers/comparative-table/comparative-table.component.scss
+++ b/src/app/modules/admin/containers/comparative-table/comparative-table.component.scss
@@ -85,14 +85,63 @@
   }
 }
 .footer {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  margin-bottom: 30px;
   .footer__btn-back {
+    background: #56b5ec;
+    border: 1px solid #56b5ec;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    height: 66px;
+    border-radius: 35px;
+    width: 115px;
+    font-size: 20px;
+    margin-bottom: 30px;
+    margin-left: 78px;
   }
   .comment {
+    padding: 0 50px;
     .comment__title {
+      text-align: center;
+      margin-bottom: 0;
+      margin-top: 20px;
+      font-size: 18px;
     }
     .comment__textarea {
+      width: 895px;
+      height: 179px;
+      background: rgba(255, 255, 255, 0.02);
+      border: 3px solid #979797;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border-radius: 5px;
+      overflow-y: scroll;
+      resize: none;
+      padding: 40px 60px;
+      outline-color: $outline-focus-center;
+      font-size: 18px;
+      line-height: 22px;
+      &::-webkit-scrollbar {
+        width: 15px; /* width of the entire scrollbar */
+      }
+      &::-webkit-scrollbar-track {
+        background: rgba(255, 255, 255, 0); /* color of the tracking area */
+      }
+      &::-webkit-scrollbar-thumb {
+        background-color: #d9d9d9; /* color of the scroll thumb */
+        border-radius: 50px; /* roundness of the scroll thumb */
+        border: 1px solid #ffffff; /* creates padding around scroll thumb */
+      }
     }
   }
   .footer__btn-create {
+    background: #56b5ec;
+    border: 1px solid #56b5ec;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    height: 66px;
+    border-radius: 35px;
+    width: 194px;
+    font-size: 20px;
+    margin-bottom: 30px;
   }
 }
