Feat: Crea mock de ejes con variables y respuestas - crea componente para variables comparativas

--- a/src/app/modules/admin/containers/comparative-table/comparative-table.component.html
+++ b/src/app/modules/admin/containers/comparative-table/comparative-table.component.html
@@ -19,11 +19,7 @@
     <div class="axe">
       <h5 class="axe__title">Eje 1</h5>
       <div class="axe__variables-container">
-        <div class="compare">
-          <p class="compare__value"></p>
-          <p class="compare__variable"></p>
-          <p class="compare__value"></p>
-        </div>
+        <app-compare-variable></app-compare-variable>
       </div>
     </div>
   </div>
