Feat: agrega la funcion goToCharts

--- a/src/app/modules/admin/containers/variables-group/variables-group.component.html
+++ b/src/app/modules/admin/containers/variables-group/variables-group.component.html
@@ -213,7 +213,7 @@
       </mat-select>
     </div>
     <div class="container-button">
-      <button class="modal-button" mat-button>Aceptar</button>
+      <button class="modal-button" mat-button (click)="goTocharts()" >Aceptar</button>
     </div>
   </div>
    <div *ngIf="flagSelectCenter" class="overlay"></div>
