--- a/src/app/modules/admin/containers/comparative-table/comparative-table.component.scss
+++ b/src/app/modules/admin/containers/comparative-table/comparative-table.component.scss
@@ -37,6 +37,7 @@
     padding: 10px 27px;
     background: #92cdef;
     border-radius: 5px;
+    width: 260px;
     .header__report {
       text-align: center;
       font-size: 16px;
