--- a/src/app/modules/admin/components/compare-variable/compare-variable.component.scss
+++ b/src/app/modules/admin/components/compare-variable/compare-variable.component.scss
@@ -1,8 +1,29 @@
 @import "../../../../../styles/variables.scss";
 
 .compare {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 113.5px;
   .compare__value {
+    width: 93px;
+    min-height: 37px;
+    border: 1px solid #979797;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    font-size: 12px;
+    margin: 0;
+    color: #3d3b3f;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    word-break: break-all;
   }
   .compare__variable {
+    margin: 0;
+    font-style: italic;
+    font-size: 14px;
+    color: #083d5e;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
 }
