--- a/src/app/modules/admin/containers/comparative-table/comparative-table.component.html
+++ b/src/app/modules/admin/containers/comparative-table/comparative-table.component.html
@@ -28,11 +28,19 @@
     </div>
   </div>
   <footer class="footer">
-    <button class="footer__btn-back" mat-raised-button>Atrás</button>
+    <button class="footer__btn-back" (click)="onGoBack()" mat-raised-button>
+      Atrás
+    </button>
     <div class="comment">
       <h5 class="comment__title">Informe</h5>
       <textarea class="comment__textarea" name="" id=""></textarea>
     </div>
-    <button class="footer__btn-create" mat-raised-button>Crear informe</button>
+    <button
+      class="footer__btn-create"
+      (click)="onCreateReport()"
+      mat-raised-button
+    >
+      Crear informe
+    </button>
   </footer>
 </section>
