--- a/src/app/modules/admin/containers/comparative-table/comparative-table.component.scss
+++ b/src/app/modules/admin/containers/comparative-table/comparative-table.component.scss
@@ -80,42 +80,48 @@
 }
 
 .footer {
+  font-size: 16px;
   display: flex;
   flex-direction: row;
   align-items: flex-end;
+  justify-content: center;
   margin-bottom: 30px;
+  width: 100%;
   .footer__btn-back {
     background: #56b5ec;
     border: 1px solid #56b5ec;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    height: 66px;
-    border-radius: 35px;
-    width: 115px;
-    font-size: 20px;
-    margin-bottom: 30px;
-    margin-left: 78px;
+    box-shadow: 0 0.2em 0.2em rgba(0, 0, 0, 0.25);
+    height: 3.3em;
+    border-radius: 1.75em;
+    width: 5.75em;
+    font-size: 1.25em;
+    margin-bottom: 1.5em;
+    margin-left: 3.9em;
+    flex-shrink: 0;
   }
   .comment {
-    padding: 0 50px;
+    margin: 0 3.125em;
+    width: 100%;
+    max-width: 55.93em;
     .comment__title {
       text-align: center;
       margin-bottom: 0;
-      margin-top: 20px;
-      font-size: 18px;
+      margin-top: 1.111em;
+      font-size: 1.125em;
     }
     .comment__textarea {
-      width: 895px;
-      height: 179px;
+      width: 100%;
+      height: 9.944em;
       background: rgba(255, 255, 255, 0.02);
       border: 3px solid #979797;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      border-radius: 5px;
+      box-shadow: 0 0.222em 0.222em rgba(0, 0, 0, 0.25);
+      border-radius: 0.277em;
       overflow-y: scroll;
       resize: none;
-      padding: 40px 60px;
+      padding: 2.222em 3.333em;
       outline-color: $outline-focus-center;
-      font-size: 18px;
-      line-height: 22px;
+      font-size: 1.125em;
+      line-height: 1.222em;
       &::-webkit-scrollbar {
         width: 15px; /* width of the entire scrollbar */
       }
@@ -132,11 +138,18 @@
   .footer__btn-create {
     background: #56b5ec;
     border: 1px solid #56b5ec;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    height: 66px;
-    border-radius: 35px;
-    width: 194px;
-    font-size: 20px;
-    margin-bottom: 30px;
+    box-shadow: 0 0.2em 0.2em rgba(0, 0, 0, 0.25);
+    height: 3.3em;
+    border-radius: 1.75em;
+    width: 9.7em;
+    font-size: 1.25em;
+    margin-bottom: 1.5em;
+    flex-shrink: 0;
+  }
+}
+@media (max-width: 1400px) {
+  .footer {
+    font-size: 12px;
+    max-width: 983px;
   }
 }
