Refactor: Agrega id de centro elegido a ruta

--- a/src/app/modules/admin/containers/centers/centers.component.html
+++ b/src/app/modules/admin/containers/centers/centers.component.html
@@ -77,7 +77,7 @@
               src="../../../../../assets/icons/compare-24.png"
               alt="icono de Comparar"
               matTooltip="Comparar Reportes"
-              (click)="createCompareReports(2)"
+              (click)="createCompareReports(element.id)"
             />
             <img
               class="list-center__ico-action list-center__ico-action--report"
