Refactor: obtiene id-centro de ruta y renderiza nombreReporte en pantalla

--- a/src/app/modules/admin/containers/create-comparative-reports/create-comparative-reports.component.html
+++ b/src/app/modules/admin/containers/create-comparative-reports/create-comparative-reports.component.html
@@ -22,7 +22,7 @@
                 [value]="item"
                 (click)="onChange1(i)"
                 [disabled]="item === report2"
-                >{{ item.name }}
+                >{{ item.nombreReporte }}
                 <div class="select-item__checkbox">
                   <input
                     class="select-item__input-checkbox"
@@ -88,7 +88,7 @@
                 [value]="item"
                 (click)="onChange2(i)"
                 [disabled]="item === report1"
-                >{{ item.name }}
+                >{{ item.nombreReporte }}
                 <div class="select-item__checkbox">
                   <input
                     class="select-item__input-checkbox"
