Feat: Implementa endpoint de obtencion de variables en comun

--- a/src/app/modules/admin/containers/create-comparative-reports/create-comparative-reports.component.html
+++ b/src/app/modules/admin/containers/create-comparative-reports/create-comparative-reports.component.html
@@ -67,7 +67,7 @@
                 *ngFor="let item of variablesList"
                 [value]="item"
                 (click)="selectOne()"
-                >{{ item.name }}</mat-option
+                >{{ item.nombre }}</mat-option
               >
             </mat-select>
           </div>
