--- a/src/app/modules/admin/containers/create-comparative-reports/create-comparative-reports.component.scss
+++ b/src/app/modules/admin/containers/create-comparative-reports/create-comparative-reports.component.scss
@@ -122,6 +122,10 @@
 }
 .select-item__option {
   flex-direction: row-reverse;
+  overflow-x: hidden;
+  ::ng-deep .mat-option-text {
+    text-overflow: ellipsis;
+  }
 }
 .select-item__checkbox {
   position: relative;
