Feat: Agrega ng model para textarea
para guardar este valor en la descripcion del body para post de crear reporte

--- a/src/app/modules/admin/containers/comparative-table/comparative-table.component.html
+++ b/src/app/modules/admin/containers/comparative-table/comparative-table.component.html
@@ -33,7 +33,12 @@
     </button>
     <div class="comment">
       <h5 class="comment__title">Informe</h5>
-      <textarea class="comment__textarea" name="" id=""></textarea>
+      <textarea
+        class="comment__textarea"
+        name="comment"
+        id="comment"
+        [(ngModel)]="comment"
+      ></textarea>
     </div>
     <button
       class="footer__btn-create"
