--- a/src/app/modules/admin/containers/centers/centers.component.html
+++ b/src/app/modules/admin/containers/centers/centers.component.html
@@ -187,4 +187,9 @@
       </button>
     </div>
   </div>
+  <app-modal-alert
+    [flag]="flagCreatedReport"
+    type="success"
+    [modalText]="modalText"
+  ></app-modal-alert>
 </section>
