--- a/src/app/modules/admin/components/modal-alert/modal-alert.component.scss
+++ b/src/app/modules/admin/components/modal-alert/modal-alert.component.scss
@@ -10,27 +10,34 @@
   align-items: center;
   z-index: 4000;
   .modal-success {
+    position: relative;
     width: 525px;
-    height: 264px;
+    min-height: 264px;
+    max-height: 500px;
     background-color: #def2d6;
     border: 1px solid #def2d6;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
-    padding-bottom: 21px;
+    padding: 40px 40px 30px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     margin: auto;
     .modal__btnClose {
-      padding: 21px 12px 18px 25px;
+      position: absolute;
+      top: 0;
+      right: 0;
+      padding: 21px 12px;
       width: 61px;
       height: 70px;
-      align-self: flex-end;
       cursor: pointer;
     }
     .modal__conteiner {
       width: 474px;
       display: flex;
+      justify-content: space-between;
+      align-items: center;
       .modal__ico {
         width: 94px;
         height: 120px;
@@ -43,7 +50,8 @@
         letter-spacing: 0.25px;
         color: #154520;
         margin-bottom: 0;
-        margin-left: 44px;
+        overflow-x: hidden;
+        text-overflow: ellipsis;
       }
     }
   }
