--- a/src/app/modules/admin/components/modal-alert/modal-alert.component.scss
+++ b/src/app/modules/admin/components/modal-alert/modal-alert.component.scss
@@ -56,3 +56,12 @@
     }
   }
 }
+.modal {
+  .modal-alert {
+    background-color: #def2d6;
+    padding: 40px;
+    .modal__conteiner {
+      justify-content: center;
+    }
+  }
+}
