Refactor: Cambia texto ONG por Administracion
Pedido por PO en presentacion de release 2

--- a/src/app/modules/user/components/report-upload/report-upload.component.html
+++ b/src/app/modules/user/components/report-upload/report-upload.component.html
@@ -79,7 +79,7 @@
           src="../../../../../assets/icons/File earmark arrow up.svg"
           alt="Icono de carga de reporte"
         />
-        <p class="modal-end__text">Enviar Reporte a ONG</p>
+        <p class="modal-end__text">Enviar Reporte a Administración</p>
       </div>
       <div class="modal-end__btn-conteiner">
         <button
