Feat: agrega maqueta de variables en componente de lista de reportes comparativos
para refactorizarla y adaptarla a esta maqueta

--- a/src/app/modules/admin/containers/create-comparative-reports/create-comparative-reports.component.html
+++ b/src/app/modules/admin/containers/create-comparative-reports/create-comparative-reports.component.html
@@ -72,7 +72,11 @@
               >
             </mat-select>
             <p
-              class="select-item__label select-item__label--variables select-item__label--noVariables"
+              class="
+                select-item__label
+                select-item__label--variables
+                select-item__label--noVariables
+              "
               *ngIf="flagNoVariables"
             >
               Estos reportes no tienen variables en común
