--- a/src/app/modules/admin/containers/list-comparative-reports/list-comparative-reports.component.scss
+++ b/src/app/modules/admin/containers/list-comparative-reports/list-comparative-reports.component.scss
@@ -2,12 +2,12 @@
 p {
   margin: 0;
 }
-.container-variables {
+.container-reports {
   width: 100%;
   display: flex;
   justify-content: center;
   padding-left: 123px;
-  .variables {
+  .reports {
     font-size: 16px;
     width: 100%;
     max-width: 71.0625em;
@@ -16,48 +16,27 @@ p {
     align-items: center;
     flex-direction: column;
     margin: 0 7.9375em;
-    .variables__title {
-      font-size: 1.875rem;
-      line-height: 1.2em;
+    .reports__title {
+      font-size: 34px;
+      line-height: 1.3em;
       text-align: center;
       color: $color-text-primary;
-      margin-top: 2.5em;
-      margin-bottom: 1.166em;
+      margin-top: 1.176em;
+      margin-bottom: 1.764em;
     }
-    .variables__container-search {
+    .reports__subtitle {
+      font-size: 30px;
+      line-height: 1.2em;
+      text-align: center;
+    }
+    .reports__container-search {
       display: flex;
       align-items: center;
-      align-self: flex-start;
-      .btn-add-variables {
-        font-size: 1em;
-        text-decoration: none;
+
+      .lbl-search-reports {
         display: flex;
         align-items: center;
-        min-width: 214px;
-        padding-right: 1em;
-        height: 3em;
-        background: $color-4;
-        box-shadow: 0em 0.25em 0.3125em rgba(0, 0, 0, 0.14),
-          0em 0.0625em 0.625em rgba(0, 0, 0, 0.12),
-          0em 0.125em 0.25em rgba(0, 0, 0, 0.2);
-        border-radius: 3.125em;
-        .btn-add-variables__ico {
-          width: 1.5em;
-          margin-left: 0.75em;
-          margin-right: 0.5em;
-        }
-        .btn-add-variables__text {
-          font-family: "Roboto Md 500";
-          font-size: 0.875em;
-          line-height: 1.142em;
-          letter-spacing: 0.0892em;
-          color: $color-white;
-        }
-      }
-      .lbl-search-variables {
-        display: flex;
-        align-items: center;
-        .lbl-search-variables__input {
+        .lbl-search-reports__input {
           width: 32.0625em;
           height: 2.8125em;
           border: 0.0625em solid #979797;
@@ -67,52 +46,59 @@ p {
           font-size: 1em;
           padding: 0 1.25em;
         }
-        .lbl-search-variables__ico {
+        .lbl-search-reports__ico {
           width: 1.5em;
         }
       }
     }
-    .list-variables {
+    .list-reports {
       width: 100%;
       max-width: 71.0625em;
       padding-bottom: 50px;
       display: flex;
       flex-direction: column;
 
-      .list-variables__table {
+      .list-reports__table {
         margin-top: 22px;
         max-width: 100%;
         border-collapse: separate;
         border-spacing: 0px 8px;
-        .list-variables__row--click {
+        .list-reports__row--click {
           transition: all 0.1s linear;
           cursor: pointer;
+          .list-reports__cell--quantity {
+            justify-self: center;
+          }
+          .list-reports__cell--action {
+            justify-self: flex-end;
+            padding-right: 48px;
+          }
           &:hover {
             // background-color: #ececec;
             background-color: $color-bg-hover-primary;
 
-            .list-variables__cell {
+            .list-reports__cell {
               color: #ffffff;
             }
-            .list-variables__cell--quantity {
+            .list-reports__cell--quantity {
               color: #ffffff;
             }
-            .list-variables__cell--action {
+            .list-reports__cell--action {
               path {
                 fill: white;
               }
             }
           }
         }
-        .list-variables__row {
+        .list-reports__row {
           box-shadow: 0 2px 2px #00000040;
-          height: 56px;
+          min-height: 56px;
           padding-top: 8px;
           padding-left: 1.5em;
-          display: flex;
-          justify-content: space-between;
+          display: grid;
+          grid-template-columns: 1fr 1fr 1fr;
           align-items: center;
-          .list-variables__header {
+          .list-reports__header {
             text-align: start;
             font-family: "Inter-700";
             font-size: 1em;
@@ -122,10 +108,14 @@ p {
               padding-left: 1.5em;
             }
           }
-          .list-variables__header--quantity {
-            padding-right: 86px;
+          .list-reports__header--quantity {
+            justify-self: center;
           }
-          .list-variables__cell {
+          .list-reports__header--date {
+            padding-right: 48px;
+            justify-self: flex-end;
+          }
+          .list-reports__cell {
             min-width: 300px;
             font-family: "Inter" !important;
             font-size: 1em;
@@ -136,7 +126,7 @@ p {
               padding-left: 1.5em;
             }
           }
-          .list-variables__cell--quantity {
+          .list-reports__cell--quantity {
             font-family: "Inter" !important;
             font-size: 1em;
             line-height: 1.1875em;
@@ -147,7 +137,7 @@ p {
             transition: all 0.1s linear;
             padding-right: 30px;
           }
-          .list-variables__cell--action {
+          .list-reports__cell--action {
             padding-right: 20px;
             min-width: 300px;
             display: flex;
@@ -289,22 +279,21 @@ p {
 }
 
 @media (max-width: 1400px) {
-  .container-variables {
+  .container-reports {
     justify-content: none;
-    .variables {
-      margin-right: 4.375em;
-      margin-left: 7.9375em;
-      .variables__title {
-        margin-top: 40px;
-        padding-right: 57px; //centra el titulo alineado con el logo del header
+    .reports {
+      margin-right: 4.9375em;
+      margin-left: 4.9375em;
+      .reports__title {
+        margin-top: 20px;
+        margin-bottom: 30px;
       }
-      .list-variables__table {
-        .list-variables__row {
-          .list-variables__header--quantity {
-            padding-right: 136px !important;
+      .list-reports__table {
+        .list-reports__row {
+          .list-reports__header--quantity {
           }
 
-          .list-variables__cell--quantity {
+          .list-reports__cell--quantity {
             padding-right: 79px;
           }
         }
@@ -319,11 +308,11 @@ p {
   }
 }
 @media (max-width: 768px) {
-  .container-variables {
-    .variables {
+  .container-reports {
+    .reports {
       font-size: 0.875em;
       margin-left: 7em;
-      .variables__title {
+      .reports__title {
         padding-right: 135.75px;
       }
     }
