--- a/src/app/modules/admin/containers/list-comparative-reports/list-comparative-reports.component.scss
+++ b/src/app/modules/admin/containers/list-comparative-reports/list-comparative-reports.component.scss
@@ -29,28 +29,6 @@ p {
       line-height: 1.2em;
       text-align: center;
     }
-    .reports__container-search {
-      display: flex;
-      align-items: center;
-
-      .lbl-search-reports {
-        display: flex;
-        align-items: center;
-        .lbl-search-reports__input {
-          width: 32.0625em;
-          height: 2.8125em;
-          border: 0.0625em solid #979797;
-          border-radius: 0.5em;
-          margin: 0 1.875em;
-          outline-color: $color-primary-border;
-          font-size: 1em;
-          padding: 0 1.25em;
-        }
-        .lbl-search-reports__ico {
-          width: 1.5em;
-        }
-      }
-    }
     .list-reports {
       width: 100%;
       max-width: 71.0625em;
@@ -63,38 +41,13 @@ p {
         max-width: 100%;
         border-collapse: separate;
         border-spacing: 0px 8px;
-        .list-reports__row--click {
-          transition: all 0.1s linear;
-          cursor: pointer;
-          .list-reports__cell--quantity {
-            justify-self: center;
-          }
-          .list-reports__cell--action {
-            justify-self: flex-end;
-            padding-right: 48px;
-          }
-          &:hover {
-            // background-color: #ececec;
-            background-color: $color-bg-hover-primary;
 
-            .list-reports__cell {
-              color: #ffffff;
-            }
-            .list-reports__cell--quantity {
-              color: #ffffff;
-            }
-            .list-reports__cell--action {
-              path {
-                fill: white;
-              }
-            }
-          }
-        }
         .list-reports__row {
           box-shadow: 0 2px 2px #00000040;
           min-height: 56px;
           padding-top: 8px;
           padding-left: 1.5em;
+          padding-right: 1.5em;
           display: grid;
           grid-template-columns: 1fr 1fr 1fr;
           align-items: center;
@@ -108,15 +61,14 @@ p {
               padding-left: 1.5em;
             }
           }
-          .list-reports__header--quantity {
+          .list-reports__header--reports {
             justify-self: center;
           }
           .list-reports__header--date {
-            padding-right: 48px;
             justify-self: flex-end;
+            padding-right: 24px;
           }
           .list-reports__cell {
-            min-width: 300px;
             font-family: "Inter" !important;
             font-size: 1em;
             line-height: 1.1875em;
@@ -126,23 +78,40 @@ p {
               padding-left: 1.5em;
             }
           }
-          .list-reports__cell--quantity {
-            font-family: "Inter" !important;
-            font-size: 1em;
-            line-height: 1.1875em;
-            color: #000000;
-            height: 50px;
-            display: flex;
-            align-items: center;
-            transition: all 0.1s linear;
-            padding-right: 30px;
+          .list-reports__cell--report1 {
+            justify-self: flex-end;
+            margin-right: 8px;
           }
+          .list-reports__cell--report2 {
+            justify-self: flex-start;
+            margin-left: 8px;
+          }
+
           .list-reports__cell--action {
-            padding-right: 20px;
-            min-width: 300px;
+            padding-right: 60px;
             display: flex;
             justify-content: flex-end;
             transition: all 0.1s linear;
+          }
+        }
+        .list-reports__row--click {
+          grid-template-columns: 1fr 1fr 6px 1fr 1fr;
+          transition: all 0.1s linear;
+          cursor: pointer;
+          .list-reports__cell--action {
+            justify-self: flex-end;
+          }
+          &:hover {
+            // background-color: #ececec;
+            background-color: $color-bg-hover-primary;
+
+            .list-reports__cell {
+              color: #ffffff;
+            }
+
+            .list-reports__cell--action {
+              color: #ffffff;
+            }
           }
         }
       }
@@ -169,114 +138,6 @@ p {
     }
   }
 }
-.modal {
-  position: fixed;
-  top: 310px;
-  z-index: 200;
-  width: 525px;
-  height: 264px;
-  background-color: #def2d6;
-  border: 1px solid #def2d6;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  padding-bottom: 21px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: auto;
-  .modal__btnClose {
-    padding: 21px 12px 18px 25px;
-    width: 61px;
-    height: 70px;
-    align-self: flex-end;
-    cursor: pointer;
-  }
-  .modal__container {
-    width: 474px;
-    display: flex;
-    // margin-top: 18px;
-    .modal__ico {
-      width: 94px;
-      height: 120px;
-    }
-    .modal__text {
-      font-size: 24px;
-      text-align: center;
-      letter-spacing: 0.25px;
-      color: #154520;
-      padding-top: 40px;
-      margin-bottom: 0;
-      margin-left: 15px;
-    }
-  }
-}
-.modal-delete {
-  position: fixed;
-  top: 310px;
-  z-index: 200;
-  width: 525px;
-  height: 297px;
-  background: #fdff9a;
-  border: 1px solid rgba(253, 255, 154, 0.98);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  padding-bottom: 21px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  .modal__container-delete {
-    width: 474px;
-    display: flex;
-    margin-top: 58px;
-    align-items: center;
-    .modal__ico-info {
-      width: 80px;
-      height: 82px;
-    }
-    .modal__text {
-      font-size: 24px;
-      text-align: center;
-      letter-spacing: 0.25px;
-      color: #a06b15;
-      margin-bottom: 0;
-      margin-left: 15px;
-      line-height: 40px;
-    }
-  }
-  .modal__options {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding-left: 95px;
-    padding-right: 29px;
-    .btn-modal__cancel {
-      width: 168px;
-      height: 59px;
-      background: #ffffff;
-      color: #083d5e;
-      border: 1px solid #083d5e;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      border-radius: 35px;
-      font-size: 20px;
-      transition: $transition;
-      cursor: pointer;
-    }
-    .btn-modal__accept {
-      width: 168px;
-      height: 59px;
-      color: #e60d0d;
-      background: #ffffff;
-      border: 1px solid #c70f0f;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      border-radius: 35px;
-      font-size: 16px;
-      padding: 0 20px;
-      transition: $transition;
-      cursor: pointer;
-    }
-  }
-}
 
 @media (max-width: 1400px) {
   .container-reports {
@@ -288,23 +149,7 @@ p {
         margin-top: 20px;
         margin-bottom: 30px;
       }
-      .list-reports__table {
-        .list-reports__row {
-          .list-reports__header--quantity {
-          }
-
-          .list-reports__cell--quantity {
-            padding-right: 79px;
-          }
-        }
-      }
     }
-  }
-  .modal-delete {
-    top: 222px;
-  }
-  .modal {
-    top: 222px;
   }
 }
 @media (max-width: 768px) {
@@ -312,15 +157,6 @@ p {
     .reports {
       font-size: 0.875em;
       margin-left: 7em;
-      .reports__title {
-        padding-right: 135.75px;
-      }
     }
-  }
-  .modal-delete {
-    top: 200px;
-  }
-  .modal {
-    top: 200px;
   }
 }
